Fix compilation error on gcc-4.2

Thanks Luca Pizzamiglio for pointing it out and providing a fix.

FIXED-IN: 2.8
BUG: 314528